tests/test_assets/semantic/invalid/enums/arithmetic.cog
Color :: enum(u16) {
    Red,
    Green,
}

test::() -> void {
    Color.Red + Color.Green;
}