tests/test_assets/semantic/invalid/enums/arithmetic.expected
semantic error at line 7: left operand must be numeric
1 semantic error generated.
